--- a/index.html
+++ b/index.html
@@ -250,13 +250,13 @@
         <footer id="contact">
             <h1>Contact Me</h1>
             <div class="social-links">
-                <a href="mailto:your-email@example.com" target="_blank">
+                <a href="mailto:hari8haran8@example.com" target="_blank">
                     <img src="https://img.icons8.com/ios-filled/50/email.png" alt="Email">
                 </a>
-                <a href="https://github.com/your-username" target="_blank">
+                <a href="https://github.com/hat1412" target="_blank">
                     <img src="https://img.icons8.com/ios-glyphs/50/github.png" alt="GitHub">
                 </a>
-                <a href="https://instagram.com/your-username" target="_blank">
+                <a href="https://instagram.com/hari8haran8" target="_blank">
                     <img src="https://img.icons8.com/ios-glyphs/50/instagram-new.png" alt="Instagram">
                 </a>
             </div>
