--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     <div class="contact-container">
 
         <footer id="contact">
-            <h1>Contact Me</h1>
+            <h1>Contact Hariharan</h1>
             <div class="social-links">
                 <a href="mailto:hari8haran8@example.com" target="_blank">
                     <img src="https://img.icons8.com/ios-filled/50/email.png" alt="Email">
@@ -268,3 +268,4 @@
 
 
 </html>
+
