--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         body {
             margin: 0;
             font-family: Helvetica;
-            background-image: gradient(#000000, #00bcd4);
             background-size: cover;
             background-attachment: fixed;
             overflow-wrap: break-word;
@@ -238,9 +237,9 @@
     <section class="section section-dark" style="background-color: #1a1a1a;">
         <h1 id="projects-skills">PROJECTS</h1><br><br>
         <div class="carousel" style="display: flex; justify-content: center; align-items: center;">
-            <a href="//hat1412.github.io/Binomial-Nomenclature/"> <img src="Binomial_Skills.png"></a>
+            <a href="binomial_Nomenclature.html"> <img src="Binomial_Skills.png"></a>
             <a href=""> <img src="Vaayu+_Skills.png"></a>
-            <a href=""> <img src="Blender_Skills.png"></a>
+            <a href="blender_.html"> <img src="Blender_Skills.png"></a>
             <!-- <a href="//hat1412.github.io/Binomial-Nomenclature/"> <img src="Binomial_Skills.png"></a> -->
         </div>
     </section>
@@ -248,7 +247,7 @@
     <div class="contact-container">
 
         <footer id="contact">
-            <h1>Contact Hariharan</h1>
+            <h1>Contact Me</h1>
             <div class="social-links">
                 <a href="mailto:hari8haran8@example.com" target="_blank">
                     <img src="https://img.icons8.com/ios-filled/50/email.png" alt="Email">
@@ -268,4 +267,3 @@
 
 
 </html>
-
