--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon_1412.ico?1124" type="image/x-icon">
+    <meta name="viewport" content="width=device-width">
     <title>Hariharan Portfolio</title>
 
     <style>
@@ -15,6 +16,7 @@
             background-attachment: fixed;
             overflow-wrap: break-word;
             word-wrap: break-word;
+            background-color: gray;
         }
 
         html {
