--- a/binomial_Nomenclature.html
+++ b/binomial_Nomenclature.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Binomial Nomenclature</title>
     <link rel="shortcut icon" href="favicon_1412.ico?1124" type="image/x-icon">
+    <meta name="viewport" content="width=device-width">
     <style>
         body {
             font-family: Arial, sans-serif;
