--- a/blender_.html
+++ b/blender_.html
@@ -47,9 +47,7 @@
             position: relative;
             animation: 4.6s infinite glow;
             border: 5px solid;
-
             border-image-slice: 1;
-
 
         }
 
@@ -173,6 +171,16 @@
         <div class="model">
             <img src="3D models/model3.png" alt="Model 3" onclick="openModal('model3.png')">
             <div class="model-name">Model 3</div>
+        </div>
+
+        <div class="model">
+            <img src="3D models/model4.png" alt="Model 4" onclick="openModal('model4.png')">
+            <div class="model-name">Model 4</div>
+        </div>
+
+        <div class="model">
+            <img src="3D models/model5.png" alt="Model 5" onclick="openModal('model5.png')">
+            <div class="model-name">Model 5</div>
         </div>
     </div>
 
