--- a/blender_.html
+++ b/blender_.html
@@ -257,7 +257,7 @@
         function openModal(src) {
             const modal = document.getElementById('imageModal');
             const modalImage = document.getElementById('modalImage');
-            modalImage.src = "3d models/" + model_list[currmodel];
+            modalImage.src = "3D models/" + model_list[currmodel];
             modal.style.display = 'flex';
             document.addEventListener('keydown', handleEscapeKey);
         }
