--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
         }
 
         .social-links img {
-            width: 50px;
-            height: 50px;
+            width: 10%;
+            height: 10%;
             transition: transform 0.3s ease;
         }
 
