--- a/binomial_Nomenclature.html
+++ b/binomial_Nomenclature.html
@@ -220,10 +220,10 @@
                         out += `
                  <tr>
                     <td>${product.id}</td>
-                    <td>${product.common_name}</td>
+                    <td>${product.cn}</td>
                     <td>${product.Genus}</td>
                     <td>${product.Species}</td>
-                    <td>${product.scientific_name}</td>
+                    <td>${product.bn}</td>
                  </tr>
               `;
                     }
