--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
             display: flex;
             justify-content: center;
             gap: 20px;
+            background-color: rgba(12, 45, 250, 0.1);
+        }
+
+        ._blank {
+            margin: 10px;
+            padding: 20px;
         }
 
         .social-links a {
@@ -217,7 +223,7 @@
     </nav>
 
     <div class="hero" id="home">
-        <h1>Hariharan</h1>
+        <h1>Hariharan Vinod</h1>
         <p style="font-size: 5vh;    bottom: 60%;    left: 8%;color: #003036;">Passionate Student Of Biology </p>
         <div class="divider" style=" bottom: 57%;    left: 8.2%;"></div>
         <p style="font-size: 3.2vh;  bottom: 52%;    left: 8.2%;">Looking for internships to gain practical
@@ -242,7 +248,6 @@
             <a href="binomial_Nomenclature.html"> <img src="Binomial_Skills.png"></a>
             <a onclick="alert(`Will be updated soon`)"> <img src="Vaayu+_Skills.png"></a>
             <a href="blender_.html"> <img src="Blender_Skills.png"></a>
-            <!-- <a href="//hat1412.github.io/Binomial-Nomenclature/"> <img src="Binomial_Skills.png"></a> -->
         </div>
     </section>
 
@@ -251,14 +256,14 @@
         <footer id="contact">
             <h1>Contact Me</h1>
             <div class="social-links">
-                <a href="mailto:hari8haran8@example.com" target="_blank">
-                    <img src="https://img.icons8.com/ios-filled/50/email.png" alt="Email">
+                <a href="mailto:hari8haran8@gmail.com" title="hari8haran8@gmail.com" class="_blank">
+                    <img src="Email_logo.png" alt="Email">
                 </a>
-                <a href="https://github.com/hat1412" target="_blank">
-                    <img src="https://img.icons8.com/ios-glyphs/50/github.png" alt="GitHub">
+                <a href="https://github.com/hat1412" title="hat1412" class="_blank">
+                    <img src="Github_logo.png" alt="GitHub">
                 </a>
-                <a href="https://instagram.com/hari8haran8" target="_blank">
-                    <img src="https://img.icons8.com/ios-glyphs/50/instagram-new.png" alt="Instagram">
+                <a href="https://instagram.com/hari8haran8" title="hari8haran8" class="_blank">
+                    <img src="Instagram_logo.png" alt="Instagram">
                 </a>
             </div>
     </div>
