--- a/index.html
+++ b/index.html
@@ -265,6 +265,10 @@
                 <a href="https://instagram.com/hari8haran8" title="hari8haran8" class="_blank">
                     <img src="Instagram_logo.png" alt="Instagram">
                 </a>
+
+                <a href="Hariharan_Vinod.pdf" title="Download Resume" class="_blank">
+                    <img src="Resume_logo.png" alt="Resume">
+                </a>
             </div>
     </div>
     <p style="text-align: center">&copy; 2024 Hariharan. All rights reserved.</p>
