--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <img src="Instagram_logo.png" alt="Instagram">
                 </a>
 
-                <a href="Hariharan_Vinod.pdf" title="Download Resume" class="_blank">
+                <a href="Hariharan_CV.pdf" title="Download Resume" class="_blank">
                     <img src="Resume_logo.png" alt="Resume">
                 </a>
             </div>
