--- a/index.html
+++ b/index.html
@@ -246,8 +246,9 @@
         <h1 id="projects-skills">PROJECTS</h1><br><br>
         <div class="carousel" style="display: flex; justify-content: center; align-items: center;">
             <a href="binomial_Nomenclature.html"> <img src="Binomial_Skills.png"></a>
-            <a onclick="alert(`Will be updated soon`)"> <img src="Vaayu+_Skills.png"></a>
+            <!-- <a onclick="alert(`Will be updated soon`)"> <img src="Vaayu+_Skills.png"></a> -->
             <a href="blender_.html"> <img src="Blender_Skills.png"></a>
+            <a href="https://aidoetest1.streamlit.app/"> <img src="Nethvera_Skills.png" alt=""></a>
         </div>
     </section>
 
